# sd700e_project

./: README.md
mrobot_msgs/: CMakeLists.txt  package.xml
mrobot_msgs/action/: DoJointTrajectory.action
mrobot_msgs/msg/: Position.msg
mrobot_msgs/src/: mrobot_joint_state.cpp  mrobot_joint_state_listen.cpp  mrobot_trajectory.cpp
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: octomap_example.cpp  pcl_example.cpp
robot_sd700e_code_demo/: CMakeLists.txt  package.xml
robot_sd700e_code_demo/include/: RobotController.h
robot_sd700e_code_demo/src/: RobotController.cpp  add_collision_object.cpp  kinematic_model_tutorial.cpp  moveit_fk_demo.cpp  moveit_ik_demo.cpp
robot_sd700e_control/: CMakeLists.txt  myrobots_hw_plugin.xml  package.xml
robot_sd700e_control/config/: controllers.yaml  hardware.yaml
robot_sd700e_control/include/: myrobot_hw.hpp
robot_sd700e_control/src/: combo_control_node.cpp  myrobot_hw.cpp
robot_sd700e_description/: CMakeLists.txt  package.xml  urdf.rviz
robot_sd700e_description/launch/: .gazebo_with_kinect.launch.swp  eye_to_hand_tf.launch  hand_to_eye_tf.launch  robot_base_link_to_color_frame.launch  view_robot_sd700e.launch  view_robot_sd700e_with_kinect.launch
robot_sd700e_description/launch/include/: robot_base_link_to_camera_bottom.launch  robot_base_link_to_camera_bottom_optical.launch  robot_base_link_to_camera_bottom_optical_0114.launch  robot_base_link_to_color_frame.launch  robot_base_link_to_color_optical_frame.launch  robot_base_link_to_color_optical_frame_0108.launch  robot_base_link_to_color_optical_frame_0114.launch
robot_sd700e_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
robot_sd700e_description/urdf/: _d435i.urdf.xacro  robot_sd700e.xacro  robot_sd700e.xacro.bak  robot_sd700e_with_kinect.xacro
robot_sd700e_gazebo/: CMakeLists.txt  package.xml
robot_sd700e_gazebo/config/: robot_sd700e_gazebo_joint_states.yaml  robot_sd700e_trajectory_control.yaml
robot_sd700e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_sd700e_moveit_config/config/: controllers_gazebo.yaml  ompl_planning.yaml  robot_sd700e.srdf  robot_sd700e_with_kinect.srdf
robot_sd700e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_with_kinect.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group_with_kinect.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution_with_kinect.launch  moveit_rviz.launch  moveit_rviz_with_kinect.launch  planning_context.launch  (+10 more)
(+8 files in other folders)
