<?xml version="1.0"?>
<package format="2">
  <name>robot_sd700e_control</name>
  <version>0.0.0</version>
  <description>The robot_sd700e_control package</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <depend>combined_robot_hw</depend>
  <depend>roscpp</depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
 
  <export>
    <hardware_interface plugin="${prefix}/myrobots_hw_plugin.xml"/>
  </export>
</package>